compiler/tools/fpp-check/test/redef_module_enum.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/redef_module_enum.fpp: 2.1
enum M { X }
^
error: redefinition of symbol M
previous definition was here:
[ local path prefix ]/compiler/tools/fpp-check/test/redef_module_enum.fpp: 1.1
module M { }
^
